# coding-agent-notifier

./: .env.example  AGENTS.md  README.md  package.json  pyproject.toml
docs/: guide.md  integrations.md  notifier_lark.md  notifier_slack.md  opencode_plugin.md
docs/examples/: copilot_wrapper.sh
docs/examples/claude/: settings.json
docs/examples/codex/: config.toml  hooks.json  hooks_lark.json
docs/examples/gemini/: hooks.json
docs/examples/opencode/: agent-notifier.env.example  agentNotifier.js  opencode.json
docs/superpowers/plans/: 2026-05-08-lark-webhook-notifier.md  2026-05-17-coding-agent-notifier-rename.md
docs/superpowers/specs/: 2026-05-08-lark-webhook-notifier-design.md  2026-05-17-coding-agent-notifier-rename-design.md
opencode-plugin/: index.d.ts  index.js
scripts/notifier/: agent_notify_example.sh  agent_notify_wrapper.sh  codex_notify_example.sh  codex_notify_wrapper.sh  lark_notify.py  lark_notify_example.sh  slack_notify.py
src/codex_slack_notifier/: notifier.py
src/coding_agent_notifier/: __init__.py  notifier.py
tests/notifier/: test_opencode_plugin.py  test_slack_notify.py
