[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-slack-notifier"
version = "0.1.0"
description = "Codex Slack notifier for coding-agent hooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
    "pre-commit>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["codex_slack_notifier"]

[tool.ruff]
line-length = 100
target-version = "py312"
