[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-notifier"
version = "0.1.0"
description = "Coding-agent completion notifier for Slack and Feishu/Lark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
    "pre-commit>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["coding_agent_notifier", "codex_slack_notifier"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
norecursedirs = ["docs"]
